--- a/Dynamic Ip Client/Dynamic Ip Client.csproj
+++ b/Dynamic Ip Client/Dynamic Ip Client.csproj
@@ -62,8 +62,10 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Groupe.cs" />
+    <Compile Include="MyRouter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Router.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
