--- a/Dynamic Ip Client/Dynamic Ip Client.csproj
+++ b/Dynamic Ip Client/Dynamic Ip Client.csproj
@@ -63,11 +63,20 @@
     </Compile>
     <Compile Include="Groupe.cs" />
     <Compile Include="MyRouter.cs" />
+    <Compile Include="NewProvider.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="NewProvider.Designer.cs">
+      <DependentUpon>NewProvider.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Router.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="NewProvider.resx">
+      <DependentUpon>NewProvider.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
